# PixelHandler

./: Cargo.toml  readme.md
examples/: example1.rs  pixel_offscreen.rs  simple_render.rs
src/: lib.rs  pixel_handler.rs
src/structs/: drawable_object.rs  grid_position.rs  pixel.rs
