[package]
name = "pixel-handler"
version = "0.1.6"
authors = ["sw1ndler <@425797455486124032>"]
edition = "2021"
readme = "README.md"
description = "Wrapper for the ggez game engine crate"
repository = "https://github.com/Sw1ndlerScripts/PixelHandler"
license = "MIT"
keywords = ["ggez", "pixel"]

[dependencies]
ggez = "0.9.3"

[lib]
name = "pixel_handler"
path = "src/lib.rs"

[[bin]]
name = "simple_render"
path = "examples/simple_render.rs"

[[bin]]
name = "pixel_offscreen"
path = "examples/pixel_offscreen.rs"
